@@ -93,6 +93,10 @@ Version 7.7 05-Mar-08
     improvement to matching performance by compiling OP_ALLANY instead of 
     OP_ANY for "." when DOTALL was set, and then removing the runtime tests 
     on the OP_ANY path. 
+    
+17. Compiling pcretest on Windows with readline support failed without the 
+    following two fixes: (1) Make the unistd.h include conditional on
+    HAVE_UNISTD_H; (2) #define isatty and fileno as _isatty and _fileno. 
 
 
 Version 7.6 28-Jan-08
